@@ -2,6 +2,8 @@ Apache SIS Change Log
 ======================
 Release 0.1-incubating (Current Development)
 
+* SIS-22 Error obtaining geodata RSS causes Qtree index to not be written
+
 * SIS-21 Path to location service shouldn't include prefix slash (mattmann)
 
 * SIS-20 Make the qTreeIdxPath and geodata paths configurable 
